Fixed styling/alignment in EditProfileModal. Fixed Remove photo button bug

--- a/topbar/src/styles/Topbar.module.css
+++ b/topbar/src/styles/Topbar.module.css
@@ -363,7 +363,7 @@
 /* hr */
 
 .hr {
-  border: 1.2px solid #e5e1e1;
+  /* border: 1.2px solid #e5e1e1; */
   width: 100%;
   margin-top: 5px;
   margin-bottom: 15px;
